--- a/index.css
+++ b/index.css
@@ -69,6 +69,12 @@ footer ul{
     list-style: none;
 }
 
+.abajo{
+    font-size: larger;
+    width: 60%;
+    text-align: center;
+}
+
 @media (max-width: 610px) {
 
     .palfoo{
